# word2anki

./: .readthedocs.yaml  README.md  README_zh.md  demo.py  pyproject.toml  requirements.in  requirements.txt  wordlist.txt
doc/: api.rst  conf.py  index.rst  requirements.in  requirements.txt
doc/_templates/: custom-class-template.rst
scripts/: ci.ps1
templates/: back.css  back.html.jinja  dictation_f.html  front.html
word2anki/: __init__.py  anki.py  search.py  store.py  type.py  word2anki.py
