[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "word2anki"
version="0.1.0"
authors = [{name="Wizard-one"}]
description = "word transform to anki card"
readme= "README.md"
requires-python =">=3.9"
keywords=["anki","English"]
dependencies =[
    "genanki",
    "requests",
    "tqdm",
    "loguru",
    "jinja2"
]

[project.optional-dependencies]
dev = [
	#doc about
	"sphinx",
	"numpydoc",
	"pydata-sphinx-theme",
	"myst-parser",
	#build about
	"setuptools",
	"build",
	]


[tool.setuptools.packages.find]
include = ["word2anki"]  # ["*"] by default


[tool.pytest.ini_options]
addopts = "-v -s"
testpaths=[
    "Test",
]
python_functions = ["test_*"] # 只运行名为test_*的测试函数
python_classes=["test_*"]
python_files = ["test_*.py"] # 只运行名为test_*.py的测试文件
pythonpath=["."] # 添加到 sys_path 的路径